# zmtx-zmrx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cpmfile.c  cpmterm.c  crctab.c  crctab.h  fileio.h  makefile  makefile.cpm  makefile.cpm.8085  opts.h  toolchain_file.txt  tosfile.c  tosterm.c  transfer.c  unixfile.c  unixterm.c  version.h  zmdm.c  zmdm.h  zmodem.h  zmrx.1  zmrx.c  zmtx.1  zmtx.c
.github/workflows/: build.yaml
Binary/: ReadMe.md
